Recent changes
-182    IMPORTANT! The default path for the user database is now the users home
        directory! For example /home/username/dsr_user_db.txt in Linux and 
        C:/users/Username in windows Vista and later. The DSR_DB_DIr environment
        variable is now deprecated.
        This version of DSR is not compatible with the DSR GUI in ShelXle-1.0.758
        and below!
        ShelXle 758 expects the user database file in the DSR directory while later
        versions will expect it in the users home directory.
        The fragment names in the listing output are now mostly sorted correctly.
        An unreadable SHELXL executable will not create an exeption any more.
-181    Fixed bug where external restraints produced "illegal instruction" error
        in SHELXL. AFIX 9 and +dfixfile is now recognized by a unique id.
        External restraints with a rigid group produced an invalid RESI None None 
        instruction.
-180    Moving version format to integer. Final export format for the ShelXle GUI. 
        Faster start in Windows. Many small fixes. Improved error messages.
        In replace mode, really delete lines instead of producing blank lines. 
        User manual updates.
-1.7.7  New output format for DSRGui. New command line option for rigid group.
-1.7.6  Huge improvement in SADI consistency checker. Some new fragments NBt4+ 
        NMe4+ C20. Small fixes.
-1.7.5  Also move fluorine atoms in direction of principal ellipsoid axis with 
        SPLIT option and CF6.
-1.7.4  Added check if SADI atom pair distances are consistent with each other. 
        Added Anthracene and 9,10-Dibromoanthracene.
        Better formating of DFIX/DANG list with dfix option turned on.
        Fixed bug with occ=0.25
        Addedd C60 (with restraints) and C70 (without restraints, use dfix option).
        Some more unit tests.
-1.7.3  Small fix regarding FVAR with CF6 fragment. 